# xproject

./: .gitignore  .xproject_python  Makefile  readme.md
.github/workflows/: package.yml  release.yml
xproject-python/: .coveragerc  .flake8  Makefile  hatch_build.py  pyproject.toml  requirements.txt
xproject-python/templates/module/: attribute.py
xproject-python/templates/package/: .coveragerc  .flake8  .pylintrc  Makefile  hatch_build.py  pyproject.toml  setup.py
xproject-python/templates/project/: readme.md
xproject-python/xproject_python/: attribute.py  blueprint.py  configure.py  dialogbox.py  projector.py  utilities.py  xargproject.py
xproject-python/xproject_python/templates/module/: .coveragerc  Makefile
xproject-python/xproject_python/templates/project/: readme.md
xproject-python/xproject_python/unittest/: test_configure.py  test_projector.py
xproject-python/xproject_python/unittest/configs/: module.toml  xconfig.toml  xlc.toml  xproject.toml
