[build-system]
build-backend = "hatchling.build"
requires = [
    "hatch-requirements-txt",
    "hatchling",
]

[project]
authors = []
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
description = ""
dynamic = [
    "dependencies",
    "version",
]
keywords = []
license-files = [ "LICENSE",]
name = ""
requires-python = ""

[project.readme]
content-type = "text/markdown"
file = "readme.md"

[project.scripts]

[project.urls]
