[build-system]
build-backend = ""
requires = []

[project]
authors = []
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
description = ""
dynamic = [
    "dependencies",
]
keywords = []
license-files = [ "LICENSE",]
name = ""
requires-python = ""
version = ""

[project.readme]
content-type = "text/markdown"
file = "readme.md"

[project.scripts]

[project.urls]
